In Class (Complete)

--- a/Tutorial001_IntroToPython.ipynb
+++ b/Tutorial001_IntroToPython.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
      "output_type": "stream",
      "text": [
       "Obama kills as fly\n",
-      "Obama kills another's fly\n"
+      "Obama kills another fly\n"
      ]
     }
    ],
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Obama kills another's fly 17 times a day\n"
+      "Obama kills another fly 17 times a day\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -289,15 +289,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-27-d3d191891599>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-d3d191891599>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    print('Iteration: ', i, x[i]*y[i])\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration:  0 0\n",
+      "Iteration:  1 100\n",
+      "Iteration:  2 0\n"
      ]
     }
    ],
@@ -1641,7 +1642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
