Repush from old folder

--- a/Tutorial013_NumpyExercises.ipynb
+++ b/Tutorial013_NumpyExercises.ipynb
@@ -20,10 +20,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(5,10)\n",
+    "y = np.arange(15,20)\n",
+    "# print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outer product of lists x and y is:  [[75, 80, 85, 90, 95], [90, 96, 102, 108, 114], [105, 112, 119, 126, 133], [120, 128, 136, 144, 152], [135, 144, 153, 162, 171]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Non-numpy way to compute the outer product\n",
+    "outer_product = []\n",
+    "assert(len(x)==len(y)),'Dimension not match!'\n",
+    "\n",
+    "for i in range(len(x)):\n",
+    "    row = []\n",
+    "    for j in range(len(y)):\n",
+    "        row.append(x[i]*y[j])\n",
+    "    outer_product.append(row)\n",
+    "\n",
+    "print('Outer product of lists x and y is: ', outer_product)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The trace of the outer product matrics is:  605\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Non-numpy way to compute the trace of the result\n",
+    "\n",
+    "row = []\n",
+    "for i in range(len(x)):\n",
+    "    row.append(outer_product[i][i])\n",
+    "# print(row)\n",
+    "trace = sum(row)\n",
+    "print('The trace of the outer product matrics is: ', trace)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outer product of lists x and y is:  [[ 75  80  85  90  95]\n",
+      " [ 90  96 102 108 114]\n",
+      " [105 112 119 126 133]\n",
+      " [120 128 136 144 152]\n",
+      " [135 144 153 162 171]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numpy way to compute the outer product\n",
+    "np_outer = np.outer(x,y)\n",
+    "print('Outer product of lists x and y is: ', np_outer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The trace of the outer product matrics is:  605\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numpy way to compute the trace of the result\n",
+    "n_trace = np.trace(outer_p)\n",
+    "print('The trace of the outer product matrics is: ', n_trace)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -55,6 +169,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "A = np.random.randn(12)\n",
+    "B = np.random.randn(12)\n",
+    "A = A.reshape(4,3)\n",
+    "B = B.reshape(3,4)\n",
+    "print(A)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -74,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
