--- a/Tutorial013_NumpyExercises.ipynb
+++ b/Tutorial013_NumpyExercises.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[5 6 7 8 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = np.arange(5,10)\n",
     "y = np.arange(15,20)\n",
@@ -48,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +127,7 @@
    ],
    "source": [
     "# Numpy way to compute the trace of the result\n",
-    "n_trace = np.trace(outer_p)\n",
+    "n_trace = np.trace(outer_product)\n",
     "print('The trace of the outer product matrics is: ', n_trace)"
    ]
   },
@@ -166,33 +158,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.88578556 -0.35662833 -0.34582787]\n",
+      " [ 0.1788416   1.04483239  0.03503968]\n",
+      " [ 0.30375621  0.6648446  -0.0076617 ]\n",
+      " [ 1.12892743 -0.34755906 -0.64000717]]\n",
+      "[[-0.35608461  0.11196304 -0.77112328 -1.69238219]\n",
+      " [ 0.45985251  0.23947935 -0.09625476 -2.21213099]\n",
+      " [-0.35209681  0.09902407 -0.40657772  0.52666119]]\n",
+      "[[-0.35764615 -0.02047516 -0.50811679 -0.89231325]\n",
+      " [ 0.4044487   0.27370921 -0.25272536 -2.59552041]\n",
+      " [ 0.20026521  0.19246733 -0.29511287 -1.98883007]\n",
+      " [-0.33647511 -0.02021118 -0.57687536 -1.47879743]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.random.randn(12)\n",
     "B = np.random.randn(12)\n",
     "A = A.reshape(4,3)\n",
     "B = B.reshape(3,4)\n",
     "print(A)\n",
-    "print(B)"
+    "print(B)\n",
+    "\n",
+    "n = A.shape[0]\n",
+    "m = A.shape[1]\n",
+    "p = B.shape[1]\n",
+    "\n",
+    "C = np.zeros((4,4))\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(p):\n",
+    "        C[i,j] = sum(A[i,:]*B[:,j])\n",
+    "\n",
+    "print(C)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.         -0.02047516 -0.50811679 -0.89231325]\n",
+      " [ 0.4044487   0.         -0.25272536 -2.59552041]\n",
+      " [ 0.20026521  0.19246733  0.         -1.98883007]\n",
+      " [-0.33647511 -0.02021118 -0.57687536  0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
-    "C = "
+    "np.fill_diagonal(C,0)\n",
+    "print(C)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
